--- a/src/App.css
+++ b/src/App.css
@@ -46,11 +46,15 @@ main {
   padding: 16px;
   border-radius: 20px;
   box-shadow: 0 8px 32px rgba(255, 215, 0, 0.3);
-  background: linear-gradient(135deg, #000000, #6b4d02); /* Gradient from gold to goldenrod */
+  background: url('assets/Bg5.jpg') no-repeat center center;
+  background-size: cover; 
   border: 2px solid #FFD700;
   box-sizing: border-box;
 }
-
+.count1 {
+  font-size: 50px;
+  font-weight: bold;
+}
 .calculator {
   padding: 16px;
   border-radius: 16px;
@@ -62,7 +66,7 @@ main {
   font-size: 40px;
   color: #FFD700;
   margin: 12px 0;
-  text-shadow: 0 2px 4px rgba(255, 215, 0, 0.2);
+  text-shadow: 0 5px .5px rgba(0, 0, 0, 1);
   text-align: center; /* Center the text */
 
 }
